--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,3 +10,11 @@
 }
 
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@font-face {
+	font-family: 'Typewcond';
+	src: url(/assets/typewcond_regular.otf);
+}
+
+h1, h2, h3, h4, .card-title {
+	font-family: Typewcond, serif;
+}
